--- a/themes/brownsurfing/css/sections/blog.css
+++ b/themes/brownsurfing/css/sections/blog.css
@@ -46,7 +46,7 @@ input#searchsubmit:hover {
 input#s {
   width: 100%;
   padding: 5px 15px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 /* pagination */
