--- a/themes/brownsurfing/css/sections/nav.css
+++ b/themes/brownsurfing/css/sections/nav.css
@@ -72,11 +72,10 @@ ul.menu>li>a:hover,
     }
 } */
 
-@media screen and (max-width:1199px) {
-    .nav ul.menu {
+@media only screen and (max-width:1199px) {
+    /* .nav ul.menu {
         display: block !important;
-        /* padding: 0 20px 20px; */
-    }
+    } */
 
     /* ul.menu > li > a {
         color:white;
